--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -38,7 +38,7 @@
         </activity>
 
 
-
+        <activity android:name=".InitActivity" />
         <activity android:name=".Dialogs" />
     </application>
 
